--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -18,7 +18,7 @@
         app:srcCompat="@drawable/select" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName"
+        android:id="@+id/imageName"
         android:layout_width="368dp"
         android:layout_height="38dp"
         android:layout_marginTop="20dp"
@@ -30,7 +30,7 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName2"
+        android:id="@+id/imageOwner"
         android:layout_width="368dp"
         android:layout_height="38dp"
         android:layout_marginTop="20dp"
@@ -39,10 +39,10 @@
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
+        app:layout_constraintTop_toBottomOf="@+id/imageName" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName3"
+        android:id="@+id/imageYear"
         android:layout_width="368dp"
         android:layout_height="38dp"
         android:layout_marginTop="20dp"
@@ -51,7 +51,7 @@
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />
+        app:layout_constraintTop_toBottomOf="@+id/imageOwner" />
 
     <Button
         android:id="@+id/button"
@@ -62,5 +62,5 @@
         android:text="Save"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />
+        app:layout_constraintTop_toBottomOf="@+id/imageYear" />
 </androidx.constraintlayout.widget.ConstraintLayout>
