--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -60,6 +60,7 @@
         android:layout_marginTop="20dp"
         android:onClick="save"
         android:text="Save"
+        android:backgroundTint="#1A352E"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageYear" />
